<resources>
    <string name="app_name">Hikers Watch</string>
    <string name="hikers_watch">Hiker\'s Watch</string>
    <string name="longitude">Longitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="latitude">Latitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="address">Address:</string>
    <string name="location_access_granted">Location access granted</string>
    <string name="location_access_denied">Location access denied</string>
    <string name="no_location_details">No location details available</string>
</resources>
